Restore DH semantic route tests